--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PesCoM</title>
+    <title>Criador De Tabelas</title>
     <link rel="icon" href="icone.svg" type="image/svg">
     <link rel="stylesheet" href="style.css">
 </head>
